added api game cover image link and list all rooms options
